[tool.poetry]
name = "gm0"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
doc8 = "==0.11.2"
docutils = "==0.17.1"
furo = "==2022.04.07"
latex = "==0.7.0"
python = "^3.7"
sphinx = "==4.5.0"
sphinx-design = "==0.1.0"
sphinx-hoverxref = "==1.0.1"
sphinx-tabs = "==3.3.1"
sphinxext-linkcheckdiff = "==0.1.0"
sphinxext-opengraph = "==0.6.3"
sphinxext-rediraffe = "==0.2.7"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "==2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"