[tool.poetry]
name = "gm0"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
doc8 = "==1.1.1"
furo = "==2024.08.06"
latex = "==0.7.0"
python = "^3.10"
sphinx = "==8.0.2"
sphinx-design = "==0.6.1"
sphinx-hoverxref = "==1.4.0"
sphinx-tabs = "==3.4.5"
sphinxext-linkcheckdiff = "==0.1.0"
sphinxext-opengraph = "==0.9.1"
sphinxext-rediraffe = "==0.2.7"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "==2024.4.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
